changed h1 and p text

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 	<section>
-		<h1>Git, GitHub & the Command Line</h1>
-		<p>Gotta love becoming a collaborative coder <3</p>
+		<h1>Am I Going To Remember This?</h1>
+		<p>I hope so! I like coding!</p>
 		<img src="img/happy-blue-robot.png">
 	</section>
 </body>
